Add corti css colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,92 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --main-bg: #fafbf9;
+  --text-color--primary: var(--base-color-neutral--neutral-darkest);
+  --_typography---size--h1: 64px;
+  --_typography---weight--headings: 500;
+  --_typography---size--h2: 48px;
+  --_typography---size--h3: 30px;
+  --_typography---size--h4: 22px;
+  --_typography---size--h5: 18px;
+  --_typography---size--h6: 17px;
+  --link-color--primary: var(--base-color-neutral--neutral-darkest);
+  --text-color--alternate: var(--base-color-neutral--white);
+  --border-color--primary: var(--base-color-neutral--neutral-light);
+  --base-color-neutral--white: var(--brand-neutrals-25--white);
+  --base-color-neutral--black: var(--brand-neutrals-25--black);
+  --_typography---size--body: 17px;
+  --_typography---font-weight--button: 500;
+  --brand-neutrals-25--neutral-800: #333;
+  --brand-neutrals-25--neutral-200: #d8d8db;
+  --brand-neutrals-25--neutral-300: #b3b3b3;
+  --body-small: 0.875rem;
+  --black-archive\<deleted\|variable-dccb7db6\>: black;
+  --background-color--secondary: var(--base-color-neutral--neutral-lightest);
+  --border-color--secondary: var(--base-color-neutral--neutral-lighter);
+  --_typography---size--blog: 1.1857rem;
+  --_typography---weight--body: 400;
+  --mono-font: "IBM Plex Mono", sans-serif;
+  --border-radius--md: 8px;
+  --background-color--alternate: var(--base-color-neutral--black);
+  --link-color--alternate: var(--base-color-neutral--white);
+  --background-color--primary: var(--brand-neutrals-25--white);
+  --background-color--tertiary: var(--base-color-neutral--neutral-lighter);
+  --text-color--secondary: var(--base-color-neutral--neutral);
+  --background-color--success: var(--base-color-system--success-green-light);
+  --text-color--success: var(--base-color-system--success-green);
+  --background-color--error: var(--base-color-system--error-red-light);
+  --text-color--error: var(--base-color-system--error-red);
+  --border-radius--xs: 4px;
+  --base-color-neutral--neutral-lightest: #f2f2f2;
+  --_typography---font-size-xs: 0.75rem;
+  --_typography---weight--mono: 500;
+  --border-radius--full: 999px;
+  --body\<deleted\|variable-6487a723-9ccc-34ce-bbee-05900c6dd4bd\>: "Inter Variable";
+  --container-large\<deleted\|variable-2623866b-9d2c-26d7-3230-d4a908c9c419\>: 89rem;
+  --large-card\<deleted\|variable-dd2d4b4e-25cc-ea65-9d08-1d3b7bf4d306\>: 1.25rem;
+  --gap--row-gap: 4rem;
+  --gap--col-gap: 2.5rem;
+  --6\<deleted\|variable-e2e45c49-e7e9-ff5e-7859-1e5cac26801b\>: 20px;
+  --brand-neutrals-25--neutral-50: #f9f9f9;
+  --brand-neutrals-25--white: #fff;
+  --border-radius--xxl: 20px;
+  --border-radius--lg: 12px;
+  --border-radius--xl: 16px;
+  --font-size-small: 0.875rem;
+  --radius-xs\<deleted\|variable-4bdfb079-e456-2e10-71c1-c8021a8cc5c5\>: 4px;
+  --base-color-brand--white: var(--brand-neutrals-25--white);
+  --base-color-neutral--neutral-lighter: #e6e6e6;
+  --border-color--alternate: var(--base-color-neutral--white);
+  --border-radius--sm: 6px;
+  --brand-neutrals-25--neutral-600: #666;
+  --base-color-brand--black: var(--brand-neutrals-25--black);
+  --brand-neutrals-25--black: #000;
+  --brand-neutrals-25--neutral-900: #191919;
+  --brand-neutrals-25--neutral-100: #e5e5e7;
+  --brand-neutrals-25--neutral-700: #4d4d4d;
+  --base-color-neutral--neutral-darkest: #191919;
+  --base-color-neutral--neutral-darker: #333;
+  --_typography---size--meta: 14px;
+  --_typography---family--sans-serif: "Inter Variable";
+  --_typography---family--monospace: "IBM Plex Mono", sans-serif;
+  --_typography---family--mono-letter-spacing: 4%;
+  --base-color-neutral--neutral-light: #b3b3b3;
+  --base-color-neutral--neutral: #666;
+  --base-color-neutral--neutral-dark: #4d4d4d;
+  --base-color-system--success-green: #30a46c;
+  --base-color-system--success-green-light: #e9f9ee;
+  --base-color-system--error-red: #c62a2f;
+  --base-color-system--error-red-light: #ffefef;
+  --border-color--error: var(--base-color-system--error-red);
+  --border-color--sucess: var(--base-color-system--success-green);
+  --link-color--secondary: var(--base-color-neutral--neutral);
+  --link-color--success: var(--base-color-system--success-green);
+  --link-color--error: var(--base-color-system--error-red);
+  --swag--border-background-color: var(--border-color--secondary);
+  --swag--color: #226663;
+  --brand-neutrals-25--neutral-500: #7f7f7f;
+  --brand-neutrals-25--neutral-400: #999;
 }
 
 @theme inline {
